Added cloud image and PlaceHolder

--- a/src/components/HeroSection.css
+++ b/src/components/HeroSection.css
@@ -7,7 +7,7 @@ video {
 }
 
 .hero-container {
-  /* background: url('/images/img-home.jpg') center center/cover no-repeat; */
+  background: url('/images/cover-pic-cloud-app-development-4.svg') center no-repeat;
   height: 100vh;
   width: 100%;
   display: flex;
@@ -16,6 +16,7 @@ video {
   align-items: center;
   box-shadow: inset 0 0 0 1000px rgba(0, 0, 0, 0.2);
   object-fit: contain;
+  
 }
 
 .hero-container > h1 {
