--- a/src/App.css
+++ b/src/App.css
@@ -25,6 +25,20 @@
   font-size: 100px;
 }
 
+.cloud {
+  align-self: auto;
+  font-size: 48px;
+  color: black;
+  left: 50px;
+  margin-right: 50px;
+  margin-left: 100px;
+  margin-top: 100px;
+  font-family: sans-serif;
+  font-style: normal;
+  font-weight: 300;
+  line-height: 1.25;
+}
+
 .products {
   background-image: url('/images/img-1.jpg');
   background-position: center;
